--- a/monitoring-center-backend/Dockerfile
+++ b/monitoring-center-backend/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.7-alpine
 
-LABEL maintainer="your email here"
-LABEL description="You description here"
+LABEL maintainer="me@aurelienhugues.com"
+LABEL description="Heimdall monitoring center backend"
 LABEL version="0.0.0"
 
 WORKDIR /usr/app
-COPY app.py README.md requirements.txt ./
+COPY app.py README.md requirements.txt wsgi.py ./
 COPY monitoring_center ./monitoring_center
 
 RUN pip install gunicorn
@@ -15,4 +15,4 @@ RUN mkdir /config
 VOLUME /config
 
 ENTRYPOINT [ "gunicorn" ]
-CMD ["wsgi:app"]
+CMD ["wsgi:app", "-b", "0.0.0.0:8000"]
