Ref #7: Add database support and Probe model

--- a/monitoring-center-backend/setup.cfg
+++ b/monitoring-center-backend/setup.cfg
@@ -1,6 +1,3 @@
-[aliases]
-test = pytest
-
 [isort]
 multi_line_output = 3
 force_grid_wrap = 2
@@ -12,3 +9,6 @@ lines_between_types = 1
 
 [pycodestyle]
 max-line-length = 120
+
+[tool:pytest]
+mocked-sessions=monitoring_center.models.database.db.session
