--- a/monitoring-center-backend/pytest.ini
+++ b/monitoring-center-backend/pytest.ini
@@ -10,6 +10,7 @@ addopts =
     --cov-report term
     --cov-report html:coverage/html
     --cov monitoring_center/
+    --cov tests/
     --pycodestyle
     --isort
     --mccabe
